--- a/tutorials/systemVerilog/mux_4x1/ubuntu.css
+++ b/tutorials/systemVerilog/mux_4x1/ubuntu.css
@@ -43,5 +43,7 @@ video {
 table {
   width: 55vw!important;
   font-size: 3vw;
-  caption-side: bottom
-}  
+}
+table:
+  caption:
+    side: bottom
